--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="carousel owl-carousel">
                 <div class="card">
                     <div class="box">
-                        <img src="C:\Users\LENOVO\Pictures\Screenshots\clock.png" alt="">
+                        <img src="clock.png" alt="">
                         <a href="https://github.com/simrann121/clock-using-python">Clock Project</a>
                         <div class="text">Clock Project</div>
                         <p>
