--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="C:\Users\LENOVO\Pictures\Screenshots\snake.png" alt="">
+                        <img src="snake.png" alt="">
                         <a href="https://github.com/simrann121/Snake-python-game">Snake game</a>
                         <div class="text">Snake Game</div>
                         <p>
@@ -215,7 +215,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="C:\Users\LENOVO\Pictures\Screenshots\Screenshot 2024-07-14 221058.png" alt="">
+                        <img src="tic tak.png" alt="">
                         <a href="https://github.com/simrann121/Tic-Tac-Toe">Tic Tack Toe</a>
                         <div class="text">Tic Tak Toe</div>
                         <p>
@@ -228,7 +228,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="C:\Users\LENOVO\Pictures\Screenshots\Screenshot 2024-07-14 221824.png" alt="">
+                        <img src="quick notes.png" alt="">
                         <a href="https://github.com/simrann121/sip24-svelte-quick-notes">Quick Notes</a>
                         <div class="text">Quick Notes</div>
                         <p>
@@ -240,7 +240,7 @@
                 </div>
                 <div class="card">
                     <div class="box">
-                        <img src="C:\Users\LENOVO\Pictures\Screenshots\Screenshot 2024-07-14 222329.png" alt="">
+                        <img src="insta.png" alt="">
                         <a href="https://github.com/simrann121/sip24-sveltekit-fundamentals">Instagram clone</a>
                         <div class="text">Instagram Clone</div>
                         <p>
